--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+walkdir = "2"
 getopts = "0.2.21"
 proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
 syn = { version = "1.0.95", features = ["full", "visit", "extra-traits"] }
